--- a/proposal.css
+++ b/proposal.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Arial', sans-serif;
     text-align: center;
     color: white;
+    flex-direction: column;
 }
 
 .container {
@@ -20,9 +21,12 @@ h1 {
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
+.buttons {
+    margin-top: 20px;
+}
+
 .btn {
     display: inline-block;
-    margin-top: 20px;
     padding: 15px 30px;
     font-size: 1.2rem;
     color: white;
@@ -32,11 +36,17 @@ h1 {
     text-decoration: none;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
+    cursor: pointer;
+    margin: 10px;
 }
 
 .btn:hover {
     background: #ff2e63;
     transform: scale(1.1);
+}
+
+.no {
+    position: relative;
 }
 
 @keyframes fadeIn {
